src/test/deca/context/valid/SansObjet/Cast-DeclVar-int-floatVar.deca
// Description:
//    Declaration of a int variable using a int cast on a float variable .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 14/01/2022 

{
    float x =  1.51 ; 
    int y =  (int) ( x ) ; 
}
