src/test/deca/context/invalid/SansObjet/DeclVar-Mod-boolean-int-float.deca
// Description:
//    Declaration of a boolean variable using % operation between a int variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  5; 
    float y = 1.5; 
    boolean z = 5 % 1.5; 
}
